--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ click = "^8.1.7"
 colorama = "^0.4.6"
 requests = "^2.32.3"
 pyyaml = "^6.0.1"
+jinja2 = "^3.1.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
