--- a/.github/workflows/python-base.yml
+++ b/.github/workflows/python-base.yml
@@ -20,6 +20,10 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
 
+    env:
+      GITHUB_USERNAME: ${{ secrets.PROJECT_GITHUB_USERNAME }}
+      GITHUB_API_TOKEN: ${{ secrets.PROJECT_GITHUB_API_TOKEN }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
