--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -13,6 +13,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      GITHUB_USERNAME: ${{ secrets.PROJECT_GITHUB_USERNAME }}
+      GITHUB_API_TOKEN: ${{ secrets.PROJECT_GITHUB_API_TOKEN }}
+
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
